Added kconfig file dor mqtt params. Changed mqtt config variable.

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,7 @@ board_build.embed_txtfiles =
   components/esp32-wifi-manager/src/index.html
   components/esp32-wifi-manager/src/style.css
   components/esp32-wifi-manager/src/code.js
+  src/certs/private.pem.key
+  src/certs/device.pem.crt
+  src/certs/aws_root_c1.pem
+  
