--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,5 +2,10 @@
 # without default 'CMakeLists.txt' file.
 
 FILE(GLOB_RECURSE app_sources ${CMAKE_SOURCE_DIR}/src/*.*)
+idf_component_register(SRCS ${app_sources} 
+    EMBED_TXTFILES 
+        "certs/aws_root_c1.pem" 
+        "certs/device.pem.crt" 
+        "certs/private.pem.key")
 
-idf_component_register(SRCS ${app_sources})
+
