--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "esp_log.h": "c",
         "oled_service.h": "c",
         "stdio.h": "c",
-        "cjson.h": "c"
+        "cjson.h": "c",
+        "task.h": "c"
     }
 }
